baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__phase3a__void_function_result_used_error.snap
---
source: crates/baml_tests/src/compiler2_tir/phase3a.rs
expression: "render_tir(&db, file)"
---
function user.g() -> void throws never {
  { : void
  }
}
function user.f() -> int throws never {
  { : 1
    let x = g() : void
    1 : 1
  }
  !! 56..59: cannot use return value of a void function
}
