baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__phase3a__void_function_return_value_error.snap
---
source: crates/baml_tests/src/compiler2_tir/phase3a.rs
expression: "render_tir(&db, file)"
---
function user.f() -> void throws never {
  { : never
    return 42 : 42
  }
  !! 30..32: type mismatch: expected void, got 42
}
